[package]
name = "tocbz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7"
sevenz-rust = "0.5"
tempfile = "3"
unrar = "0.5"
walkdir = "2"
zip = "0.6"
indicatif = { version = "0.17.8", features = ["rayon"] }
